add new website from server na

--- a/xem-phim-bo/rong-di-tim-nha/index.html
+++ b/xem-phim-bo/rong-di-tim-nha/index.html
@@ -1186,7 +1186,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             3
+             4
             </dd>
             <br/>
            </dl>
@@ -1666,18 +1666,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/thanh-kiem-vo-danh" title="Thanh Kiếm Vô Danh">
+          <a class="list-top-movie-link" href="/phim-moi/huyen-thoai-vikings-phan-4" title="Huyền Thoại Vikings (Phần 4)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thanh-kiem-vo-danh-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/huyen-thoai-vikings-phan-4-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Thanh Kiếm Vô Danh
+             Huyền Thoại Vikings (Phần 4)
             </span>
             <span class="list-top-movie-item-en">
-             The Sword with No Name
+             Vikings (Season 4)
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1688,18 +1688,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tam-dung-doi-ta-xem-huong-dan" title="Tạm Dừng! Đợi Ta Xem Hướng Dẫn">
+          <a class="list-top-movie-link" href="/phim-moi/chien-binh-cyborg" title="Chiến Binh Cyborg">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/let-me-check-the-walkthrough-first-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chien-binh-cyborg-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Tạm Dừng! Đợi Ta Xem Hướng Dẫn
+             Chiến Binh Cyborg
             </span>
             <span class="list-top-movie-item-en">
-             Let Me Check the Walkthrough First
+             Cyborg X
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/terim" title="Terim">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/terim-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Terim
+            </span>
+            <span class="list-top-movie-item-en">
+             Terim
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1710,18 +1732,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/phi-the-thao" title="Phi thể thao">
+          <a class="list-top-movie-link" href="/phim-moi/beach-rats" title="Beach Rats">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/phi-the-thao-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/beach-rats-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Phi thể thao
+             Beach Rats
             </span>
             <span class="list-top-movie-item-en">
-             Bad Sport
+             Beach Rats
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1732,43 +1754,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/ban-nang-nguyen-thuy" title="Bản Năng Nguyên Thủy">
+          <a class="list-top-movie-link" href="/phim-moi/thieu-lam-tu" title="Thiếu Lâm Tự">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ban-nang-nguyen-thuy-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thieu-lam-tu-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Bản Năng Nguyên Thủy
+             Thiếu Lâm Tự
             </span>
             <span class="list-top-movie-item-en">
-             Raw - Grave
+             The Shaolin Temple
             </span>
             <span class="list-top-movie-item-view">
-             6 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/startup-phan-3" title="StartUp (Phần 3)">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/startup-phan-3-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             StartUp (Phần 3)
-            </span>
-            <span class="list-top-movie-item-en">
-             StartUp (Season 3)
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
