add new website from server na

--- a/xem-phim-bo/nghi-thuc-hoa-anh-dao/index.html
+++ b/xem-phim-bo/nghi-thuc-hoa-anh-dao/index.html
@@ -1189,7 +1189,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             2
+             3
             </dd>
             <br/>
            </dl>
@@ -1659,62 +1659,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cau-chuyen-than-ky" title="Câu Chuyện Thần Kỳ">
+          <a class="list-top-movie-link" href="/phim-moi/hanh-trinh-pokemon-loat-phim-pokemon-journeys" title="Hành trình Pokémon: Loạt phim (Pokémon Journeys)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cau-chuyen-than-ky-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hanh-trinh-pokemon-loat-phim-pokemon-journeys-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Câu Chuyện Thần Kỳ
+             Hành trình Pokémon: Loạt phim (Pokémon Journeys)
             </span>
             <span class="list-top-movie-item-en">
-             Lemony Snicket's A Series of Unfortunate Events
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/hoi-ke-chuyen-nua-dem" title="Hội kể chuyện nửa đêm">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hoi-ke-chuyen-nua-dem-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Hội kể chuyện nửa đêm
-            </span>
-            <span class="list-top-movie-item-en">
-             The Midnight Club
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/luan-don-that-thu" title="Luân Đôn Thất Thủ">
-           <span class="status">
-            HD Thuyết Minh
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/luan-don-that-thu-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Luân Đôn Thất Thủ
-            </span>
-            <span class="list-top-movie-item-en">
-             London Has Fallen
+             Pokémon Journeys: The Series
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1725,21 +1681,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/4-thang-3-tuan-va-2-ngay" title="4 Tháng 3 Tuần Và 2 Ngày">
+          <a class="list-top-movie-link" href="/phim-moi/ung-dung-anh-hung" title="Ứng Dụng Anh Hùng">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/4-thang-3-tuan-va-2-ngay-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ung-dung-anh-hung-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             4 Tháng 3 Tuần Và 2 Ngày
+             Ứng Dụng Anh Hùng
             </span>
             <span class="list-top-movie-item-en">
-             4 Months, 3 Weeks and 2 Days
+             Private Hero
             </span>
             <span class="list-top-movie-item-view">
-             4 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1747,21 +1703,65 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/le-tru-ta" title="Lễ Trừ Tà">
+          <a class="list-top-movie-link" href="/phim-moi/gui-thoi-thanh-xuan-ngay-tho-tuoi-dep-ban-han" title="Gửi Thời Thanh Xuân Ngây Thơ Tươi Đẹp (Bản Hàn)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/le-tru-ta-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/gui-thoi-thanh-xuan-ngay-tho-tuoi-dep-ban-han-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Lễ Trừ Tà
+             Gửi Thời Thanh Xuân Ngây Thơ Tươi Đẹp (Bản Hàn)
             </span>
             <span class="list-top-movie-item-en">
-             The Vatican Tapes
+             A Love So Beautiful
             </span>
             <span class="list-top-movie-item-view">
-             0 lượt xem
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/tuy-hau-nhat-quyen" title="Túy Hậu Nhất Quyền">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tuy-hau-nhat-quyen-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Túy Hậu Nhất Quyền
+            </span>
+            <span class="list-top-movie-item-en">
+             The Drunken Prodigy
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/diep-vien-007-lenh-hanh-quyet" title="Điệp Viên 007: Lệnh Hành Quyết">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/diep-vien-007-lenh-hanh-quyet-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Điệp Viên 007: Lệnh Hành Quyết
+            </span>
+            <span class="list-top-movie-item-en">
+             Licence to Kill
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
