add new website from server na

--- a/xem-phim-bo/cao-oc-dam-mau/index.html
+++ b/xem-phim-bo/cao-oc-dam-mau/index.html
@@ -1195,7 +1195,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             3
+             4
             </dd>
             <br/>
            </dl>
@@ -1785,40 +1785,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/song-cung-su-tu" title="Sống cùng sư tử">
+          <a class="list-top-movie-link" href="/phim-moi/cuoc-phieu-luu-cua-chu-rua-sammy-2-thoat-khoi-thien-duong" title="Cuộc Phiêu Lưu Của Chú Rùa Sammy 2: Thoát Khỏi Thiên Đường">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/song-cung-su-tu-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cuoc-phieu-luu-cua-chu-rua-sammy-2-thoat-khoi-thien-duong-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Sống cùng sư tử
+             Cuộc Phiêu Lưu Của Chú Rùa Sammy 2: Thoát Khỏi Thiên Đường
             </span>
             <span class="list-top-movie-item-en">
-             A Lion in the House
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/breach" title="Breach">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/breach-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Breach
-            </span>
-            <span class="list-top-movie-item-en">
-             Breach
+             A Turtle's Tale 2: Sammy's Escape from Paradise
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
@@ -1829,18 +1807,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tromperie" title="Tromperie">
+          <a class="list-top-movie-link" href="/phim-moi/gia-toc-ho-manh" title="Gia Tộc Họ Mạnh">
            <span class="status">
-            HD Vietsub
+            HD Lồng Tiếng
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tromperie-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/gia-toc-ho-manh-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Tromperie
+             Gia Tộc Họ Mạnh
             </span>
             <span class="list-top-movie-item-en">
-             Deception
+             Meng's Family Mansion
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1851,21 +1829,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/gia-gan-va-my-nhan" title="Già Gân Và Mỹ Nhân">
+          <a class="list-top-movie-link" href="/phim-moi/mot-tam-hon-dep" title="Một Tâm Hồn Đẹp">
            <span class="status">
-            HD Vietsub + Thuyết minh
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/gia-gan-va-my-nhan-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mot-tam-hon-dep-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Già Gân Và Mỹ Nhân
+             Một Tâm Hồn Đẹp
             </span>
             <span class="list-top-movie-item-en">
-             Old Boy
+             A Beautiful Mind
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1873,21 +1851,43 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/anh-chang-sieu-mau-2" title="Anh Chàng Siêu Mẫu 2">
+          <a class="list-top-movie-link" href="/phim-moi/ta-khi-xu-enfield" title="Tà Khí Xứ Enfield">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/anh-chang-sieu-mau-2-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ta-khi-xu-enfield-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Anh Chàng Siêu Mẫu 2
+             Tà Khí Xứ Enfield
             </span>
             <span class="list-top-movie-item-en">
-             Zoolander 2
+             The Enfield Poltergeist
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             1 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/trong-long-dat" title="Trong lòng đất">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/trong-long-dat-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Trong lòng đất
+            </span>
+            <span class="list-top-movie-item-en">
+             In the Earth
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
