add new website from server na

--- a/xem-phim-bo/ket-thuc-bach-kim/index.html
+++ b/xem-phim-bo/ket-thuc-bach-kim/index.html
@@ -1189,7 +1189,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             3
+             4
             </dd>
             <br/>
            </dl>
@@ -1779,21 +1779,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/khi-gai-van-phong-lam-them" title="Khi Gái Văn Phòng Làm Thêm">
+          <a class="list-top-movie-link" href="/phim-moi/chien-dich-tha-qua-giang-sinh" title="Chiến dịch thả quà Giáng sinh">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/khi-gai-van-phong-lam-them-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chien-dich-tha-qua-giang-sinh-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Khi Gái Văn Phòng Làm Thêm
+             Chiến dịch thả quà Giáng sinh
             </span>
             <span class="list-top-movie-item-en">
-             Officetel Skillful Ones
+             Operation Christmas Drop
             </span>
             <span class="list-top-movie-item-view">
-             8 lượt xem
+             5 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1801,21 +1801,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/mi-ho-truyen-2" title="Mi Hồ Truyện">
+          <a class="list-top-movie-link" href="/phim-moi/cuu-chau-long-quy" title="Cửu Châu Long Quý">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mi-ho-truyen-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cuu-chau-long-quy-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Mi Hồ Truyện
+             Cửu Châu Long Quý
             </span>
             <span class="list-top-movie-item-en">
-             The Legend of the Charming Fox
+             Novoland
             </span>
             <span class="list-top-movie-item-view">
-             0 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1823,40 +1823,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/quyet-dau" title="Quyết Đấu">
+          <a class="list-top-movie-link" href="/phim-moi/chang-hau-cong-chua-kho-gan" title="Chàng Hậu – Công Chúa Khó Gần">
            <span class="status">
-            HD Vietsub
+            HD Thuyết Minh
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/quyet-dau-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chang-hau-cong-chua-kho-gan-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Quyết Đấu
+             Chàng Hậu – Công Chúa Khó Gần
             </span>
             <span class="list-top-movie-item-en">
-             Undisputed
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/chuyen-di-cua-nhung-co-gai" title="Chuyến Đi Của Những Cô Gái">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chuyen-di-cua-nhung-co-gai-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Chuyến Đi Của Những Cô Gái
-            </span>
-            <span class="list-top-movie-item-en">
-             Girls Trip
+             Mr. Queen
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1867,21 +1845,43 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/booba-vui-nau-an" title="Booba: Vui nấu ăn">
+          <a class="list-top-movie-link" href="/phim-moi/8-con-nguoi-o-istanbul" title="8 con người ở Istanbul">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/booba-vui-nau-an-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/8-con-nguoi-o-istanbul-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Booba: Vui nấu ăn
+             8 con người ở Istanbul
             </span>
             <span class="list-top-movie-item-en">
-             Booba: Food Puzzle
+             Ethos
             </span>
             <span class="list-top-movie-item-view">
              3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/tro-lai-tuoi-17" title="Trở Lại Tuổi 17">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tro-lai-tuoi-17-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Trở Lại Tuổi 17
+            </span>
+            <span class="list-top-movie-item-en">
+             17 Again
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
