add new website from server na

--- a/xem-phim-bo/huyen-nhac-sam-lam/index.html
+++ b/xem-phim-bo/huyen-nhac-sam-lam/index.html
@@ -1190,7 +1190,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             8
+             9
             </dd>
             <br/>
            </dl>
@@ -1726,18 +1726,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/da-den-luc" title="Đã Đến Lúc">
+          <a class="list-top-movie-link" href="/phim-moi/detective-conan-the-bride-of-halloween" title="Detective Conan: The Bride of Halloween">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/da-den-luc-drama-2018-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/detective-conan-the-bride-of-halloween-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Đã Đến Lúc
+             Detective Conan: The Bride of Halloween
             </span>
             <span class="list-top-movie-item-en">
-             About Time
+             Detective Conan Movie 25: Halloween no Hanayome
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1748,62 +1748,62 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/dam-cuoi-ngot-ngao" title="Đám Cưới Ngọt Ngào">
-           <span class="status">
-            HD Thuyết Minh
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dam-cuoi-ngot-ngao-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Đám Cưới Ngọt Ngào
-            </span>
-            <span class="list-top-movie-item-en">
-             Wedding Fever In Campobello
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/biet-doi-tang-hinh" title="Biệt Đội Tàng Hình">
-           <span class="status">
-            FHD Lồng Tiếng
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/biet-doi-tang-hinh-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Biệt Đội Tàng Hình
-            </span>
-            <span class="list-top-movie-item-en">
-             The Invisibles
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cai-chet-ke-phuc-thu" title="Cái chết kẻ phục thù">
+          <a class="list-top-movie-link" href="/phim-moi/chuyen-tau-dem" title="Chuyến Tàu Đêm">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cai-chet-ke-phuc-thu-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chuyen-tau-dem-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cái chết kẻ phục thù
+             Chuyến Tàu Đêm
             </span>
             <span class="list-top-movie-item-en">
-             Revenge: A Love Story
+             Night Train
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/toi-muon-muon-ga-cung-cua-ban" title="Tôi Muốn Mượn Gà Cưng Của Bạn">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/toi-muon-muon-ga-cung-cua-ban-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Tôi Muốn Mượn Gà Cưng Của Bạn
+            </span>
+            <span class="list-top-movie-item-en">
+             오빠떡하나줘
+            </span>
+            <span class="list-top-movie-item-view">
+             4 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/balance-unlimited" title="Balance: UNLIMITED">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/balance-unlimited-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Balance: UNLIMITED
+            </span>
+            <span class="list-top-movie-item-en">
+             富豪刑事 Balance:UNLIMITED
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1814,18 +1814,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/1886" title="">
+          <a class="list-top-movie-link" href="/phim-moi/dixie-be-bong" title="Dixie Bé Bỏng">
            <span class="status">
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/little-dixie-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
+             Dixie Bé Bỏng
             </span>
             <span class="list-top-movie-item-en">
+             Little Dixie
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
